--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,8 @@
     "todolist",
     "backend"
   ],
-  "author": "Your Name",
-  "license": "MIT",
+  "author": "",
+  "license": "",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
